test/analysis/flowanalysis/rec_fun-2.good
rec_fun-2.chpl:2: error: unable to resolve return type of function 'g'
rec_fun-2.chpl:2: In function 'g':
rec_fun-2.chpl:5: error: called recursively at this point
rec_fun-2.chpl:9: Function 'g' instantiated as: g(x: int(64))
